2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: improved the style.
	
	* include/functions_reporting.php: fixed into the function
	"reporting_get_agentmodule_sla_array" when have one data of a
	module.
	
	Fixes: #3606811

2013-03-05  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Added CPU
	and Process inventory change types to black list in default 
	SQL data script for bug 3606111

2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: improved the style.
	
	* include/functions_reporting.php: fixed into the function
	"reporting_get_agentmodule_sla_array" when have one data of a
	module.
	
	Fixes: #3606811

2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/snmp_explorer.php: improved the code style.
	
	* include/functions_html.php, include/ajax/module.php: rewrote the
	code for to use the last autocomplete jquery UI.

2013-03-05  Mario Pulido <mario.pulido@artica.es>
        
        *include/help/en/help_view_services.php,
        include/help/es/help_view_services.php:Modified services help.
        
        *images/help/service3.png,images/help/service4.png
        images/help/service5.png, images/help/service6.png
        images/help/service7.png. images/help/service2.png: Add images to services help.


2013-03-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fix little
	bug of agents statistics

	* include/help/en/help_field_match_snmp.php
	include/help/en/help_snmp_alert_field1.php
	include/help/es/help_field_match_snmp.php
	include/help/es/help_snmp_alert_field1.php
	pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql