@@ -1,3 +1,10 @@
+2013-03-06  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_alerts.php: Change the update counts 
+	of fired alerts when validate to do it only when the validation
+	is of a unvalidated alert. This change is to avoid broke 
+	counts
+
 2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_modules.php: improved the style.
